# interpreter

./: .gitignore  README.md
lib/: CMakeLists.txt
lib/itmoscript/: CMakeLists.txt
lib/itmoscript/include/itmoscript/: aet.h  ast.h  environment.h  interpreter.h  lexer.h  parser.h  stdlib.h  token.h  value.h
lib/itmoscript/src/: aet.cpp  ast.cpp  environment.cpp  interpreter.cpp  lexer.cpp  parser.cpp  stdlib.cpp  value.cpp
tests/: CMakeLists.txt  basic_test.cpp  codeforces_test.cpp  function_test.cpp  illegal_ops_test.cpp  loop_and_branch_test.cpp  stdlib_test.cpp  types_test.cpp
tests/etc/treap/: input.txt  output.txt  solution.itmo
